* renaming 'ubounds' argument to 'ubound' in omxMnor()
* renaming 'cov' argument to 'covariance' in omxAllInt()
* new signature for omxSetParameters(model, labels, free, values, lbound, ubound, indep)
* improving error messages in mxMatrix() function
* added R documentation for rvectorize() and cvectorize()
* implemented eigenvalues and eigenvectors
* checked in implementation of mergesort

Release 0.2.10-1172 (Mar 14, 2010)
==================================
* bugfix for assigning default data name when default data does not exist
* bugfix for sharing/unsharing data to a three-level hierarchy
* bugfix for error reporting in bad matrix access, uncalculated std. errors, and poor omxAllint thresholds
* implemented rvectorize, cvectorize algebra functions: vectorize by row, and vectorize by column
* not allowing the following forbidden characters in names or labels: "+-!~?:\*/^%<>=&|$"
* added timestamp to summary() output
* reimplemented summary() function to handle unused data rows, and independent submodels
* reimplemented names(model), model$foo, and model$foo <- value to return all components of a model tree
* started work on an "OpenMx style guide" section to the User Guide.
* fix documentation + demo errors brought to our attention by dbishop

Release 0.2.9-1147 (Mar 04, 2010)
=================================
* bugfix for ordinal FIML with columns that are not threshold columns
* bugfix for detection of algebraic cycles when multiple objective functions are present
* test cases included for standard error calculation
* enabled standard error calculation by default

Release 0.2.8-1133 (Mar 02, 2010)
=================================
* bugfix for memory leak behavior in kronecker product calculation
* implemented kronecker exponentiation operator %^%.
* actually updating means calculations in ordinal FIML models
* removing standard errors from summary() until they are computed correctly

Release 0.2.7-1125 (Feb 28, 2010)
=================================